add swagger complementar
